After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 610568 - "Error cannot find file id '%s'" needs translation comment
"Error cannot find file id '%s'" needs translation comment
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: libgnome-desktop
unspecified
Other Solaris
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-02-21 00:07 UTC by Marcel Telka
Modified: 2010-02-22 11:17 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Marcel Telka 2010-02-21 00:07:43 UTC
I am unable to properly understand the following message:

#: ../libgnome-desktop/gnome-desktop-item.c:788
#, c-format
msgid "Error cannot find file id '%s'"
msgstr ""

Please add a translation comment to the message with explanation.
Or, is the chosen wording correct? Maybe missing colon after "Error"?

Thanks for explanation.
Comment 1 Vincent Untz 2010-02-22 11:17:10 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.