Improve error string

https://bugzilla.gnome.org/show_bug.cgi?id=610568